--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
   "dependencies": {
     "@astrojs/preact": "^4.0.4",
     "@astrojs/rss": "^4.0.11",
+    "@fontsource/roboto": "^5.1.1",
+    "@tailwindcss/vite": "^4.0.6",
     "astro": "^5.3.0",
-    "preact": "^10.25.4"
+    "daisyui": "^5.0.0-beta.8",
+    "preact": "^10.25.4",
+    "tailwindcss": "^4.0.6"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16"
   }
 }
